objects/Quote_Request__c/Quote_Request__c.object-meta.xml
<CustomObject>
    <label>Quote Request</label>
    <nameField>
        <displayFormat>QR-{000000}</displayFormat>
        <label>Quote Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>