objects/Quote_Request__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <label>AttachmentId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>