objects/Quote_Request__c/fields/Bill_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attn__c</fullName>
    <description>Bill To Attn for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the name of the person to whom this should be billed.</inlineHelpText>
    <label>Bill To Attn</label>
    <length>250</length>
    <type>Text</type>
</CustomField>