objects/Quote_Request__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>City of the Bill To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>City of the Bill To address for this Quote Request.</inlineHelpText>
    <label>Bill To City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>