objects/Quote_Request__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Country of the Bill To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Bill To Country.</inlineHelpText>
    <label>Bill To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>