objects/Quote_Request__c/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <description>Billing Name for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the name of the person to whom this should be billed.</inlineHelpText>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>