objects/Quote_Request__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>Postal Code of the Bill To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Bill To Postal Code.</inlineHelpText>
    <label>Bill To Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>