objects/Quote_Request__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>State/Province of the Bill To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Bill To State.</inlineHelpText>
    <label>Bill To State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>