objects/Quote_Request__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>Street portion of the billing address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Bill To Street.</inlineHelpText>
    <label>Bill To Street</label>
    <type>TextArea</type>
</CustomField>