objects/Quote_Request__c/fields/Create_Quote__c.field-meta.xml
<CustomField>
    <fullName>Create_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The boolean that will be used to trigger the quote creation process when the value is TRUE. Jira ticket SS-11057.</description>
    <inlineHelpText>When this box is checked, a quote--and its quote lines--will be created.</inlineHelpText>
    <label>Create Quote</label>
    <type>Checkbox</type>
</CustomField>