objects/Quote_Request__c/fields/Deployment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Deployment Provider for this request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please select a Partner account to be the Deployment Provider.</inlineHelpText>
    <label>Deployment Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Requests (Deployment Provider)</relationshipLabel>
    <relationshipName>Quote_Requests_Deployment_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>