objects/Quote_Request__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>