objects/Quote_Request__c/fields/Distributor_Email__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email__c</fullName>
    <label>Distributor Email</label>
    <type>Email</type>
</CustomField>