objects/Quote_Request__c/fields/File_Received_in_Zift__c.field-meta.xml
<CustomField>
    <fullName>File_Received_in_Zift__c</fullName>
    <description>Unifyr to stamp the Partner Portal Attachment ID once the file attachment on the Quote Request has been sync to the partner portal successfully.</description>
    <inlineHelpText>Unifyr to stamp the Partner Portal Attachment ID once the file attachment on the Quote Request has been sync to the partner portal successfully.</inlineHelpText>
    <label>File Received in Zift</label>
    <length>80</length>
    <type>Text</type>
</CustomField>