objects/Quote_Request__c/fields/Multi_Tier_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Multi_Tier_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Tier Transaction?</label>
    <type>Checkbox</type>
</CustomField>