objects/Quote_Request__c/fields/Number_of_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Endpoints__c</fullName>
    <label>Number of Endpoints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 4,999</fullName>
            </value>
            <value>
                <fullName>5,000 - 9,999</fullName>
            </value>
            <value>
                <fullName>10,000 - 49,999</fullName>
            </value>
            <value>
                <fullName>50,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>