objects/Quote_Request__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Partner that created this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please select the Partner for the Quote.</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>