objects/Quote_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of the quote that was created from this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>The quote that was created from this Quote Request</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>