objects/Quote_Request__c/fields/Quote_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Status__c</fullName>
    <formula>TEXT(Quote__r.ApprovalStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Approval Status</label>
    <type>Text</type>
</CustomField>