objects/Quote_Request__c/fields/Quote_PDF__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;/&apos; &amp; AttachmentId__c, &quot;Quote PDF&quot;)



/*
HYPERLINK(  AttachmentId__c ,  Quote__r.Name&amp;&quot;-PDF&quot;)
*/</formula>
    <label>Quote PDF</label>
    <type>Text</type>
</CustomField>