objects/Quote_Request__c/fields/Quote_Request_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Product_Count__c</fullName>
    <description>A rollup of the Quote Request Products related to this Request. Jira ticket SS-11057.</description>
    <label>Quote Request Product Count</label>
    <summaryForeignKey>Quote_Request_Products__c.Quote_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>