objects/Quote_Request__c/fields/Record_Received__c.field-meta.xml
<CustomField>
    <fullName>Record_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Received</label>
    <type>Checkbox</type>
</CustomField>