objects/Quote_Request__c/fields/Ship_To_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_2__c</fullName>
    <description>Address line two for the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>If needed, please enter the second Ship To address line.</inlineHelpText>
    <label>Ship To Street 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>