objects/Quote_Request__c/fields/Ship_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Attn__c</fullName>
    <description>Ship To Attn for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the name of the person to whom this should be shipped.</inlineHelpText>
    <label>Ship To Attn</label>
    <length>250</length>
    <type>Text</type>
</CustomField>