objects/Quote_Request__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <description>City on the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To City.</inlineHelpText>
    <label>Ship To City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>