objects/Quote_Request__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <description>Country of the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To Country.</inlineHelpText>
    <label>Ship To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>