objects/Quote_Request__c/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <description>Name on the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To Name.</inlineHelpText>
    <label>Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>