objects/Quote_Request__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <description>Postal Code of the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To Postal Code.</inlineHelpText>
    <label>Ship To Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>