objects/Quote_Request__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <description>State/Province on the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To State.</inlineHelpText>
    <label>Ship To State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>