objects/Quote_Request__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <description>Street on the Ship To address for this Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Ship To Street.</inlineHelpText>
    <label>Ship To Street</label>
    <type>TextArea</type>
</CustomField>