objects/Quote_Request__c/fields/Solutions_Selected__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Selected__c</fullName>
    <label>Solutions Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>