objects/Quote_Request__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The Start Date of the quote. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the Start Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>