objects/Quote_Request__c/fields/Submitter_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Role__c</fullName>
    <label>Submitter Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>