objects/Quote_Request__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <defaultValue>(12)</defaultValue>
    <description>The subscription term, in months, for this request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the subscrption term, in months, for this request.</inlineHelpText>
    <label>Subscription Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>