objects/Quote_Request__c/fields/Support_Provider__c.field-meta.xml
<CustomField>
    <fullName>Support_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Requests (Support Provider)</relationshipLabel>
    <relationshipName>Quote_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>