objects/Quote_Request__c/fields/Sync_Document_with_Zift__c.field-meta.xml
<CustomField>
    <fullName>Sync_Document_with_Zift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Document with Zift</label>
    <type>Checkbox</type>
</CustomField>