objects/Quote_Request__c/fields/Sync_to_Zift__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Zift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Zift</label>
    <type>Checkbox</type>
</CustomField>