objects/Quote_Request__c/fields/Tanium_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tanium Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>