objects/Quote_Request__c/fields/Zift_Quote_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Zift_Quote_Request_Id__c</fullName>
    <label>Zift Quote Request Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>