objects/Quote_Request__c/listViews/All_Quote_Request.listView-meta.xml
<ListView>
    <fullName>All_Quote_Request</fullName>
    <columns>NAME</columns>
    <columns>Deal_Registration__c</columns>
    <columns>Tanium_Sales_Rep__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quote Request</label>
</ListView>