objects/Quote_Request__c/listViews/Outstanding_Quote_Request.listView-meta.xml
<ListView>
    <fullName>Outstanding_Quote_Request</fullName>
    <columns>NAME</columns>
    <columns>Deal_Registration__c</columns>
    <columns>Quote__c</columns>
    <columns>Partner__c</columns>
    <columns>Tanium_Sales_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Approval_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IsTaniumSalesRep__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Outstanding Quote Request</label>
</ListView>