objects/Quote_Request__c/listViews/Sales_Rep.listView-meta.xml
<ListView>
    <fullName>Sales_Rep</fullName>
    <columns>NAME</columns>
    <columns>Tanium_Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTaniumSalesRep__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sales Rep</label>
</ListView>